# google-cloud-samples

./: .gitignore  README.md
cloud-run-constant-metric/: deploy.sh  go.mod  go.sum  main.go
gce-docker-logging/: .terraform.lock.hcl  Dockerfile  go.mod  logger.go  main.go  main.tf
nginx-ops-agent/: .terraform.lock.hcl  cloud-init.yaml  dashboard.json  main.tf
otel-trace/: run-jaeger.sh
otel-trace/client/: go.mod  go.sum  main.go  run.sh
otel-trace/server/: main.py  pyproject.toml  run.sh
tips1/: .ko.yaml  deploy.sh  go.sum
